--- a/Resources/th.lproj/Localizable.strings
+++ b/Resources/th.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "restore_wallet_title" = "กู้กระเป๋า";
-"restore_wallet_info" = "คุณกำลังดำเนินการกู้กระเป๋า กรุณาเข้าใจว่าถ้าคุณกำลังจะใช้งานกระเป๋าที่จะกู้นี้ในอุปกรณ์อื่น ยอดคงเหลือที่จะแสดงผลในอุปกรณ์นี้จะถูกอัพเดทเป็นปัจจุบัน แต่รายการประวัติธุรกรรมและที่อยู่นั้นจะถูกแยกเก็บในแต่ละอุปกรณ์";
+"restore_wallet_info" = "You are trying to restore an existing Beam Wallet. Please notice that if you use your wallet on another device, your balance will be up to date, but transaction history and addresses will be kept separately on each device.";
 "no_space_title" = "พื้นที่เก็บข้อมูลไม่เพียงพอ";
 "no_space_info" = "ต้องมีพื้นที่อย่างน้อย 200 MB ในอุปกรณ์ในการกู้กระเป๋า";
 "beam_title" = "คริปโตเคอเรนซี่ที่ปลอดภัยและยืดหยุ่น";
@@ -16,7 +16,7 @@
 "seed_prhase" = "กลุ่มคำลับ";
 "input_seed" = "พิมพ์กลุ่มคำลับของคุณ";
 "confirm_seed_text" = "เพื่อให้แน่ใจว่าคุณได้ทำการเขียนกลุ่มคำลับถูกต้อง กรุณากรอกคำตามลำดับด้านล่างนี้";
-"display_seed" = "Your seed phrase is the access key to all the funds in your wallet. From now on you won’t be able to see your seed phrase in settings. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase you will not be able to recover your money.";
+"display_seed" = "กลุ่มคำลับเหล่านี้ของคุณเป็นกุญแจเพื่อที่จะเข้าถึงทรัพย์สินในกระเป๋าของคุณ หลังจากนี้คุณจะไม่สามารถดูกลุ่มคำลับนี้ในการตั้งค่า พิมพ์ลงกระดาษหรือเขียนกลุ่มคำและเก็บไว้ในที่ปลอดภัยอย่างตู้เซฟหรือห้องนิรภัย หากไม่มีกลุ่มคำลับเหล่านี้คุณจะไม่สามารถกู้คืนทรัพย์สินของคุณได้";
 "display_seed_old" = "กลุ่มคำลับเหล่านี้ของคุณเป็นกุญแจเพื่อที่จะเข้าถึงทรัพย์สินในกระเป๋าของคุณ กรุณาเขียนกลุ่มคำลับนี้ลงกระดาษเก็บไว้ในที่ปลอดภัยอย่างตู้เซฟหรือห้องนิรภัย หากไม่มีกลุ่มคำลับเหล่านี้คุณจะไม่สามารถกู้คืนทรัพย์สินของคุณได้";
 "intro_seed_main" = "ในการสร้างกระเป๋าใหม่โดยการใช้งานกลุ่มคำลับนั้นเมื่อคุณทำอุปกรณ์หายคุณจำเป็นจะต้องใช้กลุ่มคำลับเหล่านี้ในการกู้กระเป๋า! อย่าได้พิมพ์กลุ่มคำลับเหล่านี้ไว้ในโปรแกรมจัดการรหัสผ่าน และอย่าเซฟไว้ในรูปแบบไฟล์ทั้งในคอมพิวเตอร์ส่วนตัวหรือออนไลน์ก็ตาม";
 "intro_seed_1" = "อย่าปล่อยให้ใครเห็นกลุ่มคำลับเหล่านี้";
@@ -51,8 +51,8 @@
 "no_internet" = "ไม่​มี​การเชื่อม​ต่อ​อินเตอร์​เน็ต";
 "wallet_not_created" = "กระเป๋าไม่ถูกสร้าง";
 "wallet_not_opened" = "กระเป๋าไม่สามารถถูกเปิดได้";
-"restor_wallet_warning" = "กรุณารอการดึงข้อมูลและอย่าปิดหรือลดหน้าหน้าจอแอป การกู้กระเป๋าอาจจะใช้เวลาซักระยะ";
-"restor_wallet_info" = "มีแค่ยอดคงเหลือของกระเป๋า (UTXO) เท่านั้นที่จะสามารถกู้คืนได้ รายการธุรกรรมและรายการที่อยู่จะเก็บอยู่บนอุปกรณ์ และจะไม่ถูกนำไปบนบล็อกเชน";
+"restor_wallet_warning" = "Restoring your wallet may take a while. Please wait for synchronization to finish - do no close nor minimize the application.";
+"restor_wallet_info" = "Only the wallet balance (UTXOs) will be restored. Your transaction info is always private and never kept on the blockchain.";
 "receive" = "รับ";
 "send" = "โอน";
 "available" = "พร้อมใช้งาน";
@@ -359,7 +359,7 @@
 "default" = "ค่าเริ่มต้น";
 "my_active" = "ยังคงใช้งานอยู่"; // addresses
 "my_expired" = "หมดอายุแล้ว"; // addresses
-"general_settings" = "ตั้งค่าทั่วไป";
+"general_settings" = "General";
 "unavailable" = "ไม่สามารถใช้ได้";
 "in_progress_out" = "กำลังดำเนินการ\n(โอนออก)";
 "in_progress_in" = "กำลังดำเนินการ\n(รับโอน)";
@@ -369,7 +369,6 @@
 "h" = "ชม."; // hour
 "m" = "น."; // minute
 "send_qr_secure" = "นำที่อยู่นี้ไปให้ผู้ที่จะโอนในช่องทางอื่นๆ";
-"share_transaction" = "แชร์รายละเอียดธุรกรรม";
 "auth_face_confirm" = "ยืนยันใบหน้าของคุณเพื่อให้สิทธิ์";
 "auth_touch_confirm" = "ยืนยันลายนิ้วมือของคุณเพื่อให้สิทธิ์";
 "auth_bio_failed" = "(Mechanism) ไม่สามารถใช้งานได้แล้วเนื่องจากผิดบ่อยมากเกินไป. กรุณากรอก Passcode เพื่อเปิดใช้งาน (Mechanism) อีกครั้ง"; // (Mechanism) is Face ID or Touch ID.
@@ -423,7 +422,7 @@
 "restore_create_text" = "หากคุณกู้กระเป๋าของคุณจะส่งผลให้ประวัติการทำธุรกรรมและที่อยู่นั้นหายไป";
 "proceed" = "ดำเนินการ";
 "info_restore_title" = "อย่าใช้กลุ่มคำลับในกระเป๋าบนหลายๆอุปกรณ์";
-"info_restore_text" = "ยอดคงเหลือและประวัติการทำธุรกรรมจะไม่ถูกแสดงข้ามอุปกรณ์และธุรกรรมอาจจะผิดพลาดได้";
+"info_restore_text" = "If you run two wallets with the same seed, their balances will not be synchronized. To keep the balances in sync, use your own trusted node configured with your owner key. Also note that transaction history is not sycnrhonized between wallets in any case.";
 "crash_title" = "กระเป๋า Beam มีปัญหาที่ไม่สามารถระบุได้";
 "crash_message" = "คุณตกลงที่จะรายงานข้อมูลเล็กน้อยกับทางเราหรือไม่? ข้อมูลความผิดพลาดนี้จะทำให้ทางเราสามารถหาปัญหาและแก้ไขได้เร็วยิ่งขึ้น เราจะเก็บเฉพาะข้อมูลที่เกี่ยวกับความผิดพลาดเท่านั้น เราจะไม่เก็บข้อมูลอื่นๆในภายหลัง";
 "crash_negative" = "ไม่ ขอบคุณ";
@@ -446,24 +445,24 @@
 "use_face_id" = "ใช้ Face ID ของคุณ";
 "enter_your_password" = "ใส่รหัสผ่านของคุณ";
 "share_details" = "แชร์รายละเอียด";
-"faucet_title" = "Start using the wallet";
-"faucet_text" = "Would you like to see the wallet in action? Get a very small amount of Beams from the community faucet.";
-"faucet_ok" = "Yes, please";
-"faucet_no" = "No, I'm fine";
-"show_seed_phrase" = "Show seed phrase";
-"increase_security" = "Increase security";
+"faucet_title" = "เริ่มต้นใช้งานกระเป๋า";
+"faucet_text" = "คุณต้องการดูว่ากระเป๋าทำงานอย่างไรไหม? คุณสามารถรับเหรียญ Beam จำนวนเล็กน้อยเพื่อมาทดสอบได้ที่ Community Faucet";
+"faucet_ok" = "ใช่ กรุณาด้วย";
+"faucet_no" = "ไม่เป็นไร ขอบคุณ";
+"show_seed_phrase" = "แสดงกลุ่มคำลับ";
+"increase_security" = "เพิ่มความปลอดภัย";
 "increase_security_text" = "If you ever lose your device, you will need this phrase to recover your wallet!\nNever type your seed phrase in keychains or password managers.\nNever save it in your local or remote folders in any form.";
 "all_set" = "You are all set";
 "wallet_is_secure" = "Your wallet is secure now! Be calm in it’s feature use.";
 "make_wallet_secure_title" = "Make your wallet secure";
 "make_wallet_secure_text" = "Please increase wallet security by saving your seed phrase so you won’t loose your funds.";
 "complete_verification" = "Complete verification";
-"yes_please" = "yes, please";
-"i_will_later" = "i will do it later";
-"create_password" = "Create password";
-"get_coins" = "Get coins";
-"secure_your_phrase" = "Secure your phrase";
-"privacy" = "Privacy";
+"yes_please" = "ใช่ กรุณาด้วย";
+"i_will_later" = "ฉันต้องการทำที่หลัง";
+"create_password" = "สร้างรหัสผ่าน";
+"get_coins" = "รับเหรียญ";
+"secure_your_phrase" = "ปกป้องกลุ่มคำของคุณ";
+"privacy" = "ความเป็นส่วนตัว";
 "complete_wallet_verification" = "Complete wallet verification";
 "clear_local_data" = "Clear local wallet data";
 "get_beam_faucet" = "Get Beams from Beam Community Faucet";
@@ -472,8 +471,9 @@
 "last_5_days" = "5 วันที่แล้ว";
 "last_15_days" = "15 วันที่แล้ว";
 "last_30_days" = "30 วันที่แล้ว";
-"clear_wallet" = "Clear wallet";
-"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
+"clear_wallet" = "Remove current wallet";
+"clear_wallet_text" = "All data will be erased. Make sure you’ve saved your seed phrase if you want to restore this wallet later on! Are you sure you want to remove your wallet?";
+"clear_wallet_password" = "Enter your password to remove your wallet";
 "change_node_text_1" = "Use Face ID or enter your password to change node settings";
 "change_node_text_2" = "Use Touch ID or enter your password to change node settings";
 "change_node_text_3" = "Enter your password to change node settings";
@@ -481,3 +481,5 @@
 "change_settings_text_2" = "Use Touch ID or enter your password to change settings";
 "change_settings_text_3" = "Enter your password to change settings";
 "paste" = "วาง";
+"status" = "สถานะ"; // transaction status
+"remove_wallet" = "Remove wallet";
