--- a/Resources/fr.lproj/Localizable.strings
+++ b/Resources/fr.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "restore_wallet_title" = "Restauration du Portefeuille";
-"restore_wallet_info" = "224/5000\nVous essayez de restaurer un portefeuille Beam existant. Veuillez noter que si vous utilisez votre portefeuille sur un autre appareil, votre solde sera à jour, mais l{[=-apos;-=]}historique et les adresses des transactions seront conservés séparément sur chaque appareil.";
+"restore_wallet_info" = "You are trying to restore an existing Beam Wallet. Please notice that if you use your wallet on another device, your balance will be up to date, but transaction history and addresses will be kept separately on each device.";
 "no_space_title" = "Pas assez de mémoire";
 "no_space_info" = "Au moins 200 Mo d'espace libre est nécessaire sur l'appareil pour restaurer le portefeuille";
 "beam_title" = "Crypto monnaie confidentielle et évolutive";
@@ -51,8 +51,8 @@
 "no_internet" = "Pas de connexion à Internet";
 "wallet_not_created" = "Le portefeuille n'a pas été crée";
 "wallet_not_opened" = "Le portefeuille ne peut pas être ouvert";
-"restor_wallet_warning" = "Veuillez patienter pendant la synchronisation et ne fermez pas ou ne minimisez pas l'application. Restaurer le portefeuille peut prendre un certain temps.";
-"restor_wallet_info" = "Seul le solde du portefeuille (UTXO) peut être restauré. Les informations et adresses de transaction sont toujours privées et ne sont jamais conservées sur la blockchain.";
+"restor_wallet_warning" = "Restoring your wallet may take a while. Please wait for synchronization to finish - do no close nor minimize the application.";
+"restor_wallet_info" = "Only the wallet balance (UTXOs) will be restored. Your transaction info is always private and never kept on the blockchain.";
 "receive" = "Recevoir";
 "send" = "Envoyer";
 "available" = "Disponible";
@@ -359,7 +359,7 @@
 "default" = "Défaut";
 "my_active" = "Actives"; // addresses
 "my_expired" = "Expirées"; // addresses
-"general_settings" = "Paramètres généraux";
+"general_settings" = "General";
 "unavailable" = "Non disponible";
 "in_progress_out" = "En cours (sortant)";
 "in_progress_in" = "En cours (entrant)";
@@ -369,7 +369,6 @@
 "h" = "heure(s)"; // hour
 "m" = "minute (s)"; // minute
 "send_qr_secure" = "Afficher ce code QR à l'expéditeur ou l'envoyer sur un canal sécurisé externe.";
-"share_transaction" = "Partager les détails de la transaction";
 "auth_face_confirm" = "Confirmez votre visage pour vous authentifier";
 "auth_touch_confirm" = "Confirmez votre empreinte digitale pour vous authentifier";
 "auth_bio_failed" = "(Mécanisme) a été verrouillé en raison de quelques essais infructeux. Entrez le code d'accès pour activer (Mécanisme)."; // (Mechanism) is Face ID or Touch ID.
@@ -423,7 +422,7 @@
 "restore_create_text" = "Si vous restaurez un portefeuille, l'historique et les adresses des transactions seront perdues.";
 "proceed" = "Procéder";
 "info_restore_title" = "Ne pas exécuter simultanément deux portefeuilles initiés à partir de la même phrase Seed";
-"info_restore_text" = "Votre balance et l'historique de vos transactions ne seront pas syncronisées sur vos appareils et certaines transactions peuvent échouer.";
+"info_restore_text" = "If you run two wallets with the same seed, their balances will not be synchronized. To keep the balances in sync, use your own trusted node configured with your owner key. Also note that transaction history is not sycnrhonized between wallets in any case.";
 "crash_title" = "Beam Wallet crashed unexpectedly";
 "crash_message" = "Would you agree to report your limited amount of information to us? Collecting crash information would allow us to discover and fix bugs much faster. This is only a single crash-related report, we won't keep collecting any of your data later.";
 "crash_negative" = "No, thanks";
@@ -472,8 +471,9 @@
 "last_5_days" = "Last 5 days";
 "last_15_days" = "Last 15 days";
 "last_30_days" = "Last 30 days";
-"clear_wallet" = "Clear wallet";
-"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
+"clear_wallet" = "Remove current wallet";
+"clear_wallet_text" = "All data will be erased. Make sure you’ve saved your seed phrase if you want to restore this wallet later on! Are you sure you want to remove your wallet?";
+"clear_wallet_password" = "Enter your password to remove your wallet";
 "change_node_text_1" = "Use Face ID or enter your password to change node settings";
 "change_node_text_2" = "Use Touch ID or enter your password to change node settings";
 "change_node_text_3" = "Enter your password to change node settings";
@@ -481,3 +481,5 @@
 "change_settings_text_2" = "Use Touch ID or enter your password to change settings";
 "change_settings_text_3" = "Enter your password to change settings";
 "paste" = "Coller";
+"status" = "Status"; // transaction status
+"remove_wallet" = "Remove wallet";
