--- a/Resources/ko.lproj/Localizable.strings
+++ b/Resources/ko.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "restore_wallet_title" = "지갑 복구하기";
-"restore_wallet_info" = "현재 이미 존재하는 Beam 지갑을 복구하려고 하고 있습니다. 지갑을 다른 기기에서 사용한다면 그 잔고는 지속적으로 업데이트 되지만, 거래 내역은 기기 별로 분리되어서 저장될 것입니다.";
+"restore_wallet_info" = "You are trying to restore an existing Beam Wallet. Please notice that if you use your wallet on another device, your balance will be up to date, but transaction history and addresses will be kept separately on each device.";
 "no_space_title" = "저장공간이 부족합니다.";
 "no_space_info" = "지갑을 복구하려면 최소한 200 Mb 의 저장공간이 필요합니다.";
 "beam_title" = "Scalable confidential cryptocurrency";
@@ -51,8 +51,8 @@
 "no_internet" = "인터넷 연결이 안되어있습니다.";
 "wallet_not_created" = "지갑이 생성되지 않았습니다.";
 "wallet_not_opened" = "지갑이 열릴 수 없습니다. ";
-"restor_wallet_warning" = "동기화가 완료될 때까지 창을 닫거나 최소화 시키지 마십시오. 지갑 복구에 일정 시간이 소요될 예정입니다.";
-"restor_wallet_info" = "오직 지갑 잔고(UTXO)만 복구됩니다, 거래 내용은 항상 비공개이고 블록체인 상에 절대 저장되지 않습니다.";
+"restor_wallet_warning" = "Restoring your wallet may take a while. Please wait for synchronization to finish - do no close nor minimize the application.";
+"restor_wallet_info" = "Only the wallet balance (UTXOs) will be restored. Your transaction info is always private and never kept on the blockchain.";
 "receive" = "받기";
 "send" = "보내기";
 "available" = "사용가능";
@@ -359,7 +359,7 @@
 "default" = "기본값";
 "my_active" = "활성화 상태 주소"; // addresses
 "my_expired" = "만료된 주소"; // addresses
-"general_settings" = "일반 설정";
+"general_settings" = "General";
 "unavailable" = "사용 불가";
 "in_progress_out" = "진행중(발신중)";
 "in_progress_in" = "진행중(수신중)";
@@ -369,7 +369,6 @@
 "h" = "시"; // hour
 "m" = "분"; // minute
 "send_qr_secure" = "해당 QR 코드를 외부의 보안 채널로 송신자에게 보냅니다.";
-"share_transaction" = "거래 상세 정보 공유";
 "auth_face_confirm" = "Face ID를 사용하여 인증하십시오";
 "auth_touch_confirm" = "지문을 사용하여 인증하십시오";
 "auth_bio_failed" = "(Mechanism) 다수의 시도로 정지되었습니다. \niPhone passcode 를 입력하여 (Mechanism) 을 다시 활성화시키십시오."; // (Mechanism) is Face ID or Touch ID.
@@ -423,7 +422,7 @@
 "restore_create_text" = "지갑을 복구한다면 모든 거래 내역과 주소들이 사라질 것입니다.";
 "proceed" = "진행중";
 "info_restore_title" = "같은 시드 구문으로 생성된 2개의 다른 지갑을 같이 실행하지 마십시오";
-"info_restore_text" = "기기간 잔고와 거래내역이 동기화되지 않는다면 거래가 실행되지 않을 것입니다.";
+"info_restore_text" = "If you run two wallets with the same seed, their balances will not be synchronized. To keep the balances in sync, use your own trusted node configured with your owner key. Also note that transaction history is not sycnrhonized between wallets in any case.";
 "crash_title" = "Beam 지갑이 알 수 없는 이유로 종료되었습니다";
 "crash_message" = "제한된 양의 정보를 당사에 보고하기로 동의 하시겠습니까? 에러 정보를 수집하면 버그를 훨씬 빨리 발견하고 수정할 수 있습니다. 이것은 에러 관련 보고서일 뿐이며 저희는 귀하의 데이터를 계속 수집하지는 않습니다.";
 "crash_negative" = "아니오, 괜찮습니다.";
@@ -472,8 +471,9 @@
 "last_5_days" = "지난 5일";
 "last_15_days" = "지난 15일";
 "last_30_days" = "지난 30일";
-"clear_wallet" = "Clear wallet";
-"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
+"clear_wallet" = "Remove current wallet";
+"clear_wallet_text" = "All data will be erased. Make sure you’ve saved your seed phrase if you want to restore this wallet later on! Are you sure you want to remove your wallet?";
+"clear_wallet_password" = "Enter your password to remove your wallet";
 "change_node_text_1" = "Use Face ID or enter your password to change node settings";
 "change_node_text_2" = "Use Touch ID or enter your password to change node settings";
 "change_node_text_3" = "Enter your password to change node settings";
@@ -481,3 +481,5 @@
 "change_settings_text_2" = "Use Touch ID or enter your password to change settings";
 "change_settings_text_3" = "Enter your password to change settings";
 "paste" = "붙여넣기";
+"status" = "상태"; // transaction status
+"remove_wallet" = "Remove wallet";
