--- a/Resources/ru.lproj/Localizable.strings
+++ b/Resources/ru.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 "restore_wallet_title" = "Восстановить кошелек";
-"restore_wallet_info" = "Вы пытаетесь восстановить существующий кошелек. Пожалуйста, обратите внимание, если ваш кошелек используется на другом устройстве, ваш баланс будет восстановлен до актуального состояния, но история транзакций и адреса будут хранится эксклюзивно для каждого устройства.";
+"restore_wallet_info" = "You are trying to restore an existing Beam Wallet. Please notice that if you use your wallet on another device, your balance will be up to date, but transaction history and addresses will be kept separately on each device.";
 "no_space_title" = "Недостаточно места в памяти";
 "no_space_info" = "На устройстве требуется не менее 200 МБ свободного места для восстановления кошелька";
 "beam_title" = "Масштабируемая, приватная криптовалюта";
@@ -51,8 +51,8 @@
 "no_internet" = "Нет соединения с Интернетом";
 "wallet_not_created" = "Кошелек не создан";
 "wallet_not_opened" = "Ошибка при открытии кошелька";
-"restor_wallet_warning" = "Пожалуйста, подождите завершения синхронизации и не закрывайте или сворачивайте приложение. Восстановление кошелька может занять некоторое время.";
-"restor_wallet_info" = "Будет восстановлен только баланс кошелька (UTXO). Информация о транзакциях не хранится в блокчейне.";
+"restor_wallet_warning" = "Restoring your wallet may take a while. Please wait for synchronization to finish - do no close nor minimize the application.";
+"restor_wallet_info" = "Only the wallet balance (UTXOs) will be restored. Your transaction info is always private and never kept on the blockchain.";
 "receive" = "Получить";
 "send" = "Отправить";
 "available" = "Доступно";
@@ -359,7 +359,7 @@
 "default" = "Стандарт";
 "my_active" = "Активные"; // addresses
 "my_expired" = "Мои просроченные"; // addresses
-"general_settings" = "Основные настройки";
+"general_settings" = "General";
 "unavailable" = "Недоступно";
 "in_progress_out" = "В процессе (исходящий)";
 "in_progress_in" = "В процессе (входящий)";
@@ -369,7 +369,6 @@
 "h" = "ч"; // hour
 "m" = "м"; // minute
 "send_qr_secure" = "Отправьте этот QR-код отправителю средств, по любому безопасному внешнему каналу.";
-"share_transaction" = "Поделиться деталями транзакции";
 "auth_face_confirm" = "Подтвердите свое лицо для аутентификации";
 "auth_touch_confirm" = "Пройдите аутентификацию используя отпечаток пальца";
 "auth_bio_failed" = "(Mechanism) заблокирован из-за нескольких неудачных попыток. Введите код доступа iPhone, чтобы включить (Mechanism)."; // (Mechanism) is Face ID or Touch ID.
@@ -423,7 +422,7 @@
 "restore_create_text" = "Если вы восстановите кошелек, история транзакций и адреса будут потеряны на этом устройстве.";
 "proceed" = "Продолжить";
 "info_restore_title" = "Не запускайте одновременно два кошелька, инициированные из одной фразы seed";
-"info_restore_text" = "История операций и баланс не будут синхронизированы между устройствами.";
+"info_restore_text" = "If you run two wallets with the same seed, their balances will not be synchronized. To keep the balances in sync, use your own trusted node configured with your owner key. Also note that transaction history is not sycnrhonized between wallets in any case.";
 "crash_title" = "Сбой приложения";
 "crash_message" = "Вы хотите сообщить нам о ограниченном количестве информации? Сбор информации о сбоях позволит нам быстрее обнаружить и исправлять ошибки. Это только один отчет, связанный с ошибкой, мы не будем собирать какие-либо из ваших данных позже.";
 "crash_negative" = "Нет, спасибо";
@@ -472,8 +471,9 @@
 "last_5_days" = "Last 5 days";
 "last_15_days" = "Last 15 days";
 "last_30_days" = "Last 30 days";
-"clear_wallet" = "Clear wallet";
-"clear_wallet_text" = "All the local data will be deleted. Are you sure you want to clear your wallet?";
+"clear_wallet" = "Remove current wallet";
+"clear_wallet_text" = "All data will be erased. Make sure you’ve saved your seed phrase if you want to restore this wallet later on! Are you sure you want to remove your wallet?";
+"clear_wallet_password" = "Enter your password to remove your wallet";
 "change_node_text_1" = "Use Face ID or enter your password to change node settings";
 "change_node_text_2" = "Use Touch ID or enter your password to change node settings";
 "change_node_text_3" = "Enter your password to change node settings";
@@ -481,3 +481,5 @@
 "change_settings_text_2" = "Use Touch ID or enter your password to change settings";
 "change_settings_text_3" = "Enter your password to change settings";
 "paste" = "Вставить";
+"status" = "Статус"; // transaction status
+"remove_wallet" = "Remove wallet";
